<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text1"
        android:layout_width="148dp"
        android:layout_height="57dp"
        android:fontFamily="@font/allan"
        android:text="@string/text1"
        android:textAlignment="viewEnd"
        android:textColor="#FFFFFF"
        android:textSize="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.344" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="327dp"
        android:layout_height="118dp"
        android:fontFamily="sans-serif"
        android:text="@string/text2"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.63"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.471" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="379dp"
        android:layout_height="63dp"
        android:fontFamily="serif-monospace"
        android:text="@string/text3"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text2"
        app:layout_constraintVertical_bias="0.0" />


    <Button
        android:id="@+id/button1"
        android:layout_width="164dp"
        android:layout_height="112dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/allan"
        android:text="@string/text4"
        android:textAllCaps="false"
        android:textColor="#D28C72"
        android:textSize="30dp"
        android:src="@drawable/circle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text3"
        app:layout_constraintVertical_bias="0.273" />


</androidx.constraintlayout.widget.ConstraintLayout>